media control: fix position/duration spacing

--- a/src/components/media_control/public/media-control.scss
+++ b/src/components/media_control/public/media-control.scss
@@ -68,6 +68,7 @@
     bottom: 7px;
     width: 100%;
     height: 32px;
+    font-size: 0;
     vertical-align: middle;
     pointer-events: auto;
     @include transition(bottom 0.4s ease-out);
@@ -167,10 +168,10 @@
         position: relative;
       }
       &[data-position] {
-        margin-left: 6px;
+        margin: 0 6px 0 7px;
       }
       &[data-duration] {
-        &:before { content: "|"; margin: 0 3px; }
+        &:before { content: "|"; margin-right: 7px; }
         color: rgba(255, 255, 255, 0.5);
         margin-right: 6px;
       }
